<resources>
    <string name="app_name">Calculatrice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="dot">,</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">Clear</string>
    <string name="Delete">Delete</string>

    <string name="lorem_ipsum">
        hELLO WORLD !
    </string>
    <string name="calculatrice_fragment_label">Calculate Fragment </string>
</resources>